166575102-story(FavouritesController):add controller to allow user favourite and unfavourite an author
  - create new endpoints for favouriting and unfavouriting an author
  - write tests for the controllers
  - add authorId validator

[Delivers #166575102]
