# server/database/seeders/20190610123525-demo-favourite-authors.js
@@ -1,0 +1,17 @@
+/* eslint-disable */
+'use strict';
+
+module.exports = {
+  up: (queryInterface, Sequelize) => {
+    return queryInterface.bulkInsert('FavouriteAuthors', [{
+      userId: 3,
+      authorId: 1,
+      createdAt: new Date(),
+      updatedAt: new Date()
+    }], {});
+  },
+
+  down: (queryInterface, Sequelize) => {
+    return queryInterface.bulkDelete('FavouriteAuthors', null, {});
+  }
+};
